--- a/css/media.css
+++ b/css/media.css
@@ -4,8 +4,6 @@
     .container{
         width: 540px;
     }
-    
-
 }
 
 /* md */
@@ -14,6 +12,9 @@
     .container{
         width: 720px;
     }
+    .col-md-6{
+        width: 50%;
+    }
 }
 
 /* lg */
@@ -21,6 +22,18 @@
 @media(min-width:992px){
     .container{
         width: 960px;
+    }
+    .d-lg-flex{
+        display: flex;
+    }
+    header nav .btn{
+        display: none;
+    }
+    .col-lg-3{
+        width: 25%;
+    }
+    .col-lg-6{
+        width: 50%;
     }
 }
 
